--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Blog. Jiu-Jitsu</title>
   <meta name=" Brazilian Jiu  Jitsu Blog" content="A Jiu Jitsu blog to keep up to date with jiu jitsu international affairs.">
   <meta name="bjj, news, competiton, athletes, tournaments" content=" Brazilian Jiu Jitsu blog news">
-  <link rel="stylesheet" href="main/style.css">
+  <link rel="stylesheet" href="../main/style.css">
 </head>
 <body>
   <header>
