--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="hero-content">
       <h1>Blog. Jiu Jitsu</h1>
       <h2>Welcome to blog. Jiu Jitsu.</h2>
-      <a href="../libaries/articles.html" class="btn">Get Started</a>
+      <a href="articles.html" class="btn">Get Started</a>
     </div>
   </section>
   <footer>
